--- a/estilos/default.css
+++ b/estilos/default.css
@@ -3,24 +3,71 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    box-sizing: border-box;
 }
 
 body {
     height: 100vh;
     position: relative;
+    background-color: #5F2C82;
     main {
         position: absolute;
-        width: 320px;
-        height: 650px;
+        width: 312px;
+        height: 645px;
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);
-        background-color: rgba(187, 187, 187, 0.616);
+        background-color: white;
         border-radius: 25px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.603);
+        > div#image {
+            width: 312px;
+            height: 250px;
+            background: url('../imagens/pexels-rdne-9089256.jpg') center center no-repeat fixed;
+            background-size: cover;
+            border-radius: 25px 25px 0 0;
+            box-shadow: inset 0 -2px 5px rgba(0, 0, 0, 0.678);
+        }
+        > div#loginfield {
+            width: 312px;
+            height: 295px;
+            padding: 10px;
+            > h1 {
+                text-align: center;
+                padding-bottom: 10px;
+            }
+            > form {
+                > div#emailfield,>div#passfield {
+                    background-color: #5F2C82;
+                    margin-top: 10px;
+                    border-radius: 10px;
+                    position: relative;
+                    > i {
+                        color: white;
+                        vertical-align: center;
+                        font-size: 40px;
+                        padding: 5px;
+                    }
+                    > input {
+                        position: absolute;
+                        width: 238px;
+                        height: 42px;
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-40%,-50%);
+                        border-radius: 7px;
+                        border: none;
+                        padding: 10px;
+                    }
+                }
+                > div#buttonfield {
+                    margin-top: 10px;
+                    > .button {
+                        width: 292px;
+                    }
+                }
+            }
+        }
     }
-}
-
-img {
-    width: 50px;
-    height: 50px;
 }
