--- a/estilos/default.css
+++ b/estilos/default.css
@@ -63,8 +63,32 @@ body {
                 }
                 > div#buttonfield {
                     margin-top: 10px;
-                    > .button {
+                    > input {
                         width: 292px;
+                        height: 40px;
+                        background-color: #53AAA7;
+                        color: white;
+                        border: none;
+                        border-radius: 5px;
+                    }
+                    > input:hover {
+                        background-color: #3A7580;
+                    }
+                    > a {
+                        display: block;
+                        padding: 8px;
+                        margin-top: 10px;
+                        text-align: center;
+                        text-decoration: none;
+                        border: 1px solid #49A09D;
+                        border-radius: 5px;
+                        color: #3A7580;
+                        > i {
+                            font-size: 15px;
+                        }
+                    }
+                    > a:hover {
+                        background-color: #94CFCD;
                     }
                 }
             }
